[Win] Ensure MiniBrowser can be built with !ENABLE(WEBKIT_LEGACY) https://bugs.webkit.org/show_bug.cgi?id=204592

Reviewed by Don Olmstead.

* MiniBrowser/win/CMakeLists.txt:
* MiniBrowser/win/Common.cpp:
(parseCommandLine):
* MiniBrowser/win/Common.h:
* MiniBrowser/win/MainWindow.cpp:
(MainWindow::init):
(MainWindow::WndProc):
* MiniBrowser/win/WinMain.cpp:
(wWinMain):
* PlatformWin.cmake:


Canonical link: https://commits.webkit.org/217847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252872 268f45cc-cd09-0410-ab3c-d52691b4dbfc