Tools/PlatformWin.cmake
@@ -1,8 +1,11 @@
 add_subdirectory(ImageDiff)
 
+if (ENABLE_WEBKIT OR ENABLE_WEBKIT_LEGACY)
+    add_subdirectory(MiniBrowser/win)
+endif ()
+
 if (ENABLE_WEBKIT_LEGACY)
     add_subdirectory(DumpRenderTree)
-    add_subdirectory(MiniBrowser/win)
 endif ()
 
 if (ENABLE_WEBKIT)
